# multi_func

./: pyproject.toml
multi_func/: __init__.py  chain.py
