[tool.poetry]
name = "multi_func"
version = "0.0.1"
description = "just4myself"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
openai = "<2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "multi_func"
export_attr = "chain"